<resources>
    <string name="app_name">Spark Calculator</string>
    <string name="totalCrystalOwned">Total Crystal Owned</string>
    <string name="totalSingleTicketsOwned">Total Single Tickets Owned</string>
    <string name="total10drawTicketsOwned">Total 10-draw Tickets Owned</string>
    <string name="result_desc">You need 0 more crystals or 0 more tickets to spark</string>
    <string name="daily_login">Daily Login</string>
    <string name="spark_calculator">Spark Calculator</string>
    <string name="side_stories">Side Stories</string>

    <string name="zero">0</string>
    <string name="X">X</string>
    <string name="two">2</string>
    <string name="ten">10</string>

    <string name="full_elixir_reward">x2</string>
    <string name="half_elixir_reward">x10</string>
    <string name="berries_reward">x30</string>
    <string name="xtal100">x100</string>
    <string name="xtal150">x150</string>
    <string name="xtal200">x200</string>
    <string name="ticket_reward">Ticket</string>
    <string name="rupie_reward">x30,000</string>
    <string name="chip_reward">x100,000</string>

    <string name="count">Count</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="xtal_150">150 Crystals</string>
    <string name="xtal_200">200 Crystals</string>
    <string name="ticket_1">1 Ticket</string>
    <string name="xtal_250">250 Crystals</string>

    <string name="daily_login_popup">You haven\'t set your daily day. Set it now</string>

    <!-- from template -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
